--- a/src/app/components/upload-archives/upload-archives.component.html
+++ b/src/app/components/upload-archives/upload-archives.component.html
@@ -1,3 +1,3 @@
-<!-- app.component.html -->
-<button (click)="openFileSelector()">Seleccionar archivo</button>
-<input type="file" id="fileInput" style="display: none" (change)="onFileSelected($event)" />
+<div class="title"> <h1>User Admin</h1>
+</div>
+  
