--- a/src/app/dialogs/user-edition-dialog/user-edition-dialog.component.html
+++ b/src/app/dialogs/user-edition-dialog/user-edition-dialog.component.html
@@ -1,20 +1,2 @@
-<h2 mat-dialog-title>Favorite Animal</h2>
+<h2 mat-dialog-title>Editar usuario</h2>
 
-  My favorite animal is:
-  <ul>
-    <li>
-      @if (data.animal === 'panda') {
-        <span>&#10003;</span>
-      } Panda
-    </li>
-    <li>
-      @if (data.animal === 'unicorn') {
-        <span>&#10003;</span>
-      } Unicorn
-    </li>
-    <li>
-      @if (data.animal === 'lion') {
-        <span>&#10003;</span>
-      } Lion
-    </li>
-  </ul>
