--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,21 @@
       <app-sidebar></app-sidebar>
     </div>
     <div class="content-container">
+      <div class="toolbar-container">
+      <mat-toolbar class="toolbar">
+        <span>My App</span>
+        <span class="example-spacer"></span>
+        <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+          <mat-icon>favorite</mat-icon>
+        </button>
+        <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+          <mat-icon>share</mat-icon>
+        </button>
+      </mat-toolbar>
+    </div>
+    <div>
       <router-outlet></router-outlet>
+    </div>
     </div>
   </div>
   
