--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -36,9 +36,17 @@
     </ul>
     <ul>
       <li>
-        <mat-list-item routerLink="/registro-pro">
+        <mat-list-item routerLink="/o">
           <mat-icon mat-list-icon>book</mat-icon>
           <span mat-line class="sidebar-item">Registro de proyecto</span>
+        </mat-list-item>
+      </li>
+    </ul>
+    <ul>
+      <li>
+        <mat-list-item routerLink="/reg-pro">
+          <mat-icon mat-list-icon>assignment_late</mat-icon>
+          <span mat-line class="sidebar-item">Registro de cursos</span>
         </mat-list-item>
       </li>
     </ul>
