--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -20,7 +20,7 @@
     </ul>
     <ul>
       <li>
-        <mat-list-item routerLink="/xd">
+        <mat-list-item routerLink="/crea-doc">
           <mat-icon mat-list-icon>account_circle</mat-icon>
           <span mat-line class="sidebar-item">Crear Docente</span>
         </mat-list-item>
@@ -28,7 +28,7 @@
     </ul>
     <ul>
       <li>
-        <mat-list-item routerLink="/xd">
+        <mat-list-item routerLink="/crea-est">
           <mat-icon mat-list-icon>account_circle</mat-icon>
           <span mat-line class="sidebar-item">Crear Estudiante</span>
         </mat-list-item>
