--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="canvas">
-    <h1>Cursos</h1>
+    <h1>Secciones</h1>
     <div class="card-container">
         <div *ngFor="let item of dataFromService" class="card" mat-elevation-z4>
             <mat-card class="mat-card-hover">
