--- a/src/app/components/crear-docentes/crear-docentes.component.html
+++ b/src/app/components/crear-docentes/crear-docentes.component.html
@@ -3,7 +3,7 @@
     <div class="card-container">
 
         <!-- Card vacía con ícono de + para agregar docente -->
-        <div class="card" mat-elevation-z4>
+        <div class="card" mat-elevation-z4 (click)="openDocenteForm()">
             <mat-card class="mat-card-hover">
                 <mat-card-header>
                     <mat-card-title>Agregar Docente</mat-card-title>
@@ -13,7 +13,7 @@
                 </mat-card-content>
             </mat-card>
         </div>
-        
+
         <div *ngFor="let item of dataFromService" class="card" mat-elevation-z4>
             <mat-card class="mat-card-hover">
                 <mat-card-header>
