--- a/src/app/components/crear-estudiantes/crear-estudiantes.component.html
+++ b/src/app/components/crear-estudiantes/crear-estudiantes.component.html
@@ -2,7 +2,7 @@
     <h1>Estudiantes</h1>
     <div class="card-container">
 
-        <div class="card" mat-elevation-z4>
+        <div class="card" mat-elevation-z4 (click)="openDocenteForm()">
             <mat-card class="mat-card-hover">
                 <mat-card-header>
                     <mat-card-title>Agregar Estudiante</mat-card-title>
