--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
     </ul>
     <ul>
       <li>
-        <mat-list-item routerLink="/home-estudiantes">
+        <mat-list-item routerLink="">
           <mat-icon mat-list-icon>home</mat-icon>
           <span mat-line class="sidebar-item">Inicio estudiantes</span>
         </mat-list-item>
@@ -36,7 +36,7 @@
     </ul>
     <ul>
       <li>
-        <mat-list-item routerLink="/o">
+        <mat-list-item routerLink="/crea-pro">
           <mat-icon mat-list-icon>book</mat-icon>
           <span mat-line class="sidebar-item">Registro de proyecto</span>
         </mat-list-item>
@@ -44,7 +44,7 @@
     </ul>
     <ul>
       <li>
-        <mat-list-item routerLink="/reg-pro">
+        <mat-list-item routerLink="/crea-cur">
           <mat-icon mat-list-icon>assignment_late</mat-icon>
           <span mat-line class="sidebar-item">Registro de cursos</span>
         </mat-list-item>
